--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,20 +13,34 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 	<servlet>
-	    <servlet-name>teacherMsg</servlet-name>
-	    <servlet-class>com.gezhi.teamone.controller.TeacherServlet</servlet-class>
+		<servlet-name>teacherMsg</servlet-name>
+		<servlet-class>com.gezhi.teamone.controller.TeacherServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-	    <servlet-name>teacherMsg</servlet-name>
-	    <url-pattern>/teacher/*</url-pattern>
+		<servlet-name>teacherMsg</servlet-name>
+		<url-pattern>/teacher/*</url-pattern>
 	</servlet-mapping>
-	<!-- 过滤器  -->
-	<!--<filter>
-	     <filter-name>userlogin</filter-name>
-	     <filter-class>com.gezhi.filter.FilterLogin</filter-class>
-	</filter>
-	<filter-mapping>
-	    <filter-name>userlogin</filter-name>
-	    <url-pattern>*</url-pattern>
-	</filter-mapping>-->
+	<servlet>
+		<servlet-name>default</servlet-name>
+		<servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
+		<init-param>
+			<param-name>debug</param-name>
+			<param-value>0</param-value>
+		</init-param>
+		<init-param>
+			<param-name>readonly</param-name>
+			<param-value>false</param-value>
+		</init-param>
+
+
+		<init-param>
+			<param-name>listings</param-name>
+			<param-value>false</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<!-- 过滤器 -->
+	<!--<filter> <filter-name>userlogin</filter-name> <filter-class>com.gezhi.filter.FilterLogin</filter-class> 
+		</filter> <filter-mapping> <filter-name>userlogin</filter-name> <url-pattern>*</url-pattern> 
+		</filter-mapping> -->
 </web-app>
